[project]
name = "plantcv-lite"
description = "PlantCV: Plant phenotyping with computer vision version for browser"
license = {file = "LICENSE"}
version = "0.1.0"
dependencies = [
    "matplotlib>=1.5",
    "numpy>=2",
    "pandas",
    "python-dateutil",
    "scipy",
    "scikit-image>=0.19",
    "scikit-learn",
    "opencv-python",
    "xarray>=2022.11.0",
    "statsmodels",
    "altair",
    "joblib",
]
requires-python = ">=3.9"
authors = [
    {name = "PlantCV Team", email = "plantcv@danforthcenter.org"},
]
keywords = ["plantcv", "plant phenotyping", "image analysis", "computer vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
plantcv-run-workflow = "plantcv.parallel.cli:main"
plantcv-train = "plantcv.learn.cli:main"
plantcv-utils = "plantcv.utils.cli:main"

[tool.setuptools.packages.find]
include = ["plantcv"]
